--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
+.vscode/
+trilha-net-poo-desafio.sln
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
